--- a/Astronomy-objc/Astronomy-objc/Base.lproj/Main.storyboard
+++ b/Astronomy-objc/Astronomy-objc/Base.lproj/Main.storyboard
@@ -23,15 +23,30 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Vva-IA-sHB">
-                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RoverPhotoCell" id="U0S-dv-3C8" customClass="RoverPhotoCollectionViewCell">
+                                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="RKd-CK-lbK">
-                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                    <autoresizingMask key="autoresizingMask"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="QCM-O6-jbf">
+                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qBO-af-lge">
+                                            <rect key="frame" x="10" y="10" width="180" height="180"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="qBO-af-lge" secondAttribute="height" multiplier="1:1" id="5pp-fa-cow"/>
+                                                <constraint firstAttribute="width" constant="180" id="yAY-8X-aZd"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="qBO-af-lge" firstAttribute="leading" secondItem="QCM-O6-jbf" secondAttribute="leading" constant="10" id="5CI-1G-C5Z"/>
+                                        <constraint firstItem="qBO-af-lge" firstAttribute="top" secondItem="QCM-O6-jbf" secondAttribute="top" constant="10" id="DbB-aL-L2J"/>
+                                        <constraint firstAttribute="bottom" secondItem="qBO-af-lge" secondAttribute="bottom" constant="10" id="V1c-sz-vX3"/>
+                                        <constraint firstAttribute="trailing" secondItem="qBO-af-lge" secondAttribute="trailing" constant="10" id="iml-AA-XCi"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
                                 <connections>
-                                    <segue destination="IQ0-f2-pcE" kind="show" identifier="ShowPhotoDetailSegue" id="5Ar-32-Cbq"/>
+                                    <outlet property="roverImage" destination="qBO-af-lge" id="UyD-wg-5Eh"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -40,7 +55,12 @@
                             <outlet property="delegate" destination="f1r-pf-7tZ" id="Yfr-3u-9IO"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" title="Sol Number" id="nJK-Co-KgP"/>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Sol Number" id="nJK-Co-KgP">
+                        <barButtonItem key="leftBarButtonItem" title="Previous" image="arrow.left" catalog="system" style="plain" id="HKB-R9-twV"/>
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="arrow.right" catalog="system" style="plain" id="vGd-jf-Lrd"/>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pzs-8j-o5Q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -55,13 +75,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8HG-NU-0gs">
-                                <rect key="frame" x="0.0" y="136" width="414" height="414"/>
+                                <rect key="frame" x="0.0" y="92" width="414" height="414"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="8HG-NU-0gs" secondAttribute="height" multiplier="1:1" id="Rh2-NW-Io8"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="HUW-kL-3zv">
-                                <rect key="frame" x="32" y="598" width="350" height="87"/>
+                                <rect key="frame" x="32" y="554" width="350" height="87"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U6D-Pp-TJd">
                                         <rect key="frame" x="0.0" y="0.0" width="350" height="20.5"/>
@@ -127,4 +147,8 @@
             <point key="canvasLocation" x="-165.21739130434784" y="-19.419642857142858"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="arrow.left" catalog="system" width="128" height="98"/>
+        <image name="arrow.right" catalog="system" width="128" height="98"/>
+    </resources>
 </document>
