--- a/Astronomy-objc/Astronomy-objc/Base.lproj/Main.storyboard
+++ b/Astronomy-objc/Astronomy-objc/Base.lproj/Main.storyboard
@@ -12,39 +12,41 @@
         <scene sceneID="9HW-Nx-kGN">
             <objects>
                 <collectionViewController id="f1r-pf-7tZ" customClass="SolCollectionViewController" customModule="Astronomy_objc" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="xhB-nR-3GG">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" dataMode="prototypes" id="xhB-nR-3GG">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="P9v-jw-w2V">
-                            <size key="itemSize" width="128" height="128"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" sectionInsetReference="safeArea" id="OVH-XI-O2F">
+                            <size key="itemSize" width="160" height="160"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="sectionInset" minX="20" minY="10" maxX="20" maxY="5"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RoverPhotoCell" id="U0S-dv-3C8" customClass="RoverPhotoCollectionViewCell">
-                                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                            <collectionViewCell autoresizesSubviews="NO" opaque="NO" multipleTouchEnabled="YES" contentMode="scaleAspectFit" reuseIdentifier="RoverPhotoCell" id="U0S-dv-3C8" customClass="RoverPhotoCollectionViewCell">
+                                <rect key="frame" x="20" y="10" width="160" height="160"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="QCM-O6-jbf">
-                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="QCM-O6-jbf">
+                                    <rect key="frame" x="0.0" y="0.0" width="160" height="160"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qBO-af-lge">
-                                            <rect key="frame" x="10" y="10" width="180" height="180"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="qBO-af-lge">
+                                            <rect key="frame" x="-0.5" y="0.0" width="160" height="160"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="qBO-af-lge" secondAttribute="height" multiplier="1:1" id="5pp-fa-cow"/>
-                                                <constraint firstAttribute="width" constant="180" id="yAY-8X-aZd"/>
+                                                <constraint firstAttribute="width" constant="160" id="JoH-5n-FSp"/>
                                             </constraints>
                                         </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="qBO-af-lge" firstAttribute="leading" secondItem="QCM-O6-jbf" secondAttribute="leading" constant="10" id="5CI-1G-C5Z"/>
-                                        <constraint firstItem="qBO-af-lge" firstAttribute="top" secondItem="QCM-O6-jbf" secondAttribute="top" constant="10" id="DbB-aL-L2J"/>
-                                        <constraint firstAttribute="bottom" secondItem="qBO-af-lge" secondAttribute="bottom" constant="10" id="V1c-sz-vX3"/>
-                                        <constraint firstAttribute="trailing" secondItem="qBO-af-lge" secondAttribute="trailing" constant="10" id="iml-AA-XCi"/>
+                                        <constraint firstAttribute="bottom" secondItem="qBO-af-lge" secondAttribute="bottom" constant="5" id="9mV-zF-jnj"/>
+                                        <constraint firstAttribute="trailing" secondItem="qBO-af-lge" secondAttribute="trailing" constant="5" id="FMq-8A-sVI"/>
+                                        <constraint firstItem="qBO-af-lge" firstAttribute="leading" secondItem="QCM-O6-jbf" secondAttribute="leading" constant="5" id="VEt-NT-424"/>
+                                        <constraint firstItem="qBO-af-lge" firstAttribute="top" secondItem="QCM-O6-jbf" secondAttribute="top" constant="5" id="cE9-Vr-X8A"/>
                                     </constraints>
                                 </collectionViewCellContentView>
+                                <size key="customSize" width="160" height="160"/>
                                 <connections>
                                     <outlet property="roverImage" destination="qBO-af-lge" id="UyD-wg-5Eh"/>
                                 </connections>
