--- a/AstronomyObjC/AstronomyObjC/Views/Base.lproj/Main.storyboard
+++ b/AstronomyObjC/AstronomyObjC/Views/Base.lproj/Main.storyboard
@@ -1,24 +1,133 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
-    </dependencies>
-    <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-        </scene>
-    </scenes>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="GGa-EB-zkA">
+  <device id="retina6_1" orientation="portrait" appearance="light"/>
+  <dependencies>
+    <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+    <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+    <capability name="collection view cell content view" minToolsVersion="11.0"/>
+    <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
+  </dependencies>
+  <scenes>
+    <!--View Controller-->
+    <scene sceneID="tne-QT-ifu">
+      <objects>
+        <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+          <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+              <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="LTf-Mn-Dc3">
+                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Y5E-AB-PKn">
+                  <size key="itemSize" width="180" height="180"/>
+                  <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                  <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                  <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                </collectionViewFlowLayout>
+                <cells>
+                  <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MarsCell" id="RYB-Fo-0Ge">
+                    <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1MO-gL-8qY">
+                      <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                      <autoresizingMask key="autoresizingMask"/>
+                    </collectionViewCellContentView>
+                    <size key="customSize" width="180" height="180"/>
+                    <connections>
+                      <segue destination="Q0D-bw-ZUh" kind="show" identifier="PhotoDetailSegue" id="rR7-6f-jpO"/>
+                    </connections>
+                  </collectionViewCell>
+                </cells>
+              </collectionView>
+            </subviews>
+            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <constraints>
+              <constraint firstItem="LTf-Mn-Dc3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="15P-S3-Ta9"/>
+              <constraint firstItem="LTf-Mn-Dc3" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="DwJ-Kj-u96"/>
+              <constraint firstItem="LTf-Mn-Dc3" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="f1v-d5-J2d"/>
+              <constraint firstItem="LTf-Mn-Dc3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="gEx-4b-bhY"/>
+            </constraints>
+            <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+          </view>
+          <navigationItem key="navigationItem" id="ywx-wt-eDL"/>
+        </viewController>
+        <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+      </objects>
+      <point key="canvasLocation" x="1042.0289855072465" y="132.58928571428572"/>
+    </scene>
+    <!--View Controller-->
+    <scene sceneID="ei9-Y8-Few">
+      <objects>
+        <viewController id="Q0D-bw-ZUh" sceneMemberID="viewController">
+          <view key="view" contentMode="scaleToFill" id="Khk-Xq-dZ0">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+              <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4wD-Cj-V7P">
+                <rect key="frame" x="0.0" y="128" width="414" height="390"/>
+                <constraints>
+                  <constraint firstAttribute="height" constant="390" id="qNT-aD-6wi"/>
+                </constraints>
+              </imageView>
+              <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LKr-Qk-vBS">
+                <rect key="frame" x="30" y="558" width="354" height="24"/>
+                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                <nil key="textColor"/>
+                <nil key="highlightedColor"/>
+              </label>
+              <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qko-oi-f7S">
+                <rect key="frame" x="30" y="602" width="354" height="21"/>
+                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <nil key="textColor"/>
+                <nil key="highlightedColor"/>
+              </label>
+              <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CzY-gQ-e0c">
+                <rect key="frame" x="118" y="663" width="178" height="36"/>
+                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                <state key="normal" title="Save to photo library"/>
+              </button>
+            </subviews>
+            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <constraints>
+              <constraint firstItem="CzY-gQ-e0c" firstAttribute="leading" secondItem="qa5-rf-huM" secondAttribute="leading" constant="118" id="0iT-R5-WN2"/>
+              <constraint firstItem="qa5-rf-huM" firstAttribute="trailing" secondItem="qko-oi-f7S" secondAttribute="trailing" constant="30" id="2q4-eq-Rcg"/>
+              <constraint firstItem="LKr-Qk-vBS" firstAttribute="top" secondItem="4wD-Cj-V7P" secondAttribute="bottom" constant="40" id="5jC-Gd-wkq"/>
+              <constraint firstItem="4wD-Cj-V7P" firstAttribute="trailing" secondItem="qa5-rf-huM" secondAttribute="trailing" id="8rp-F1-1i9"/>
+              <constraint firstItem="qko-oi-f7S" firstAttribute="leading" secondItem="qa5-rf-huM" secondAttribute="leading" constant="30" id="Hfd-tg-WjH"/>
+              <constraint firstItem="qa5-rf-huM" firstAttribute="trailing" secondItem="CzY-gQ-e0c" secondAttribute="trailing" constant="118" id="Q6d-17-k0r"/>
+              <constraint firstItem="CzY-gQ-e0c" firstAttribute="top" secondItem="qko-oi-f7S" secondAttribute="bottom" constant="40" id="SIu-R7-BPK"/>
+              <constraint firstItem="LKr-Qk-vBS" firstAttribute="leading" secondItem="qa5-rf-huM" secondAttribute="leading" constant="30" id="UrR-zs-gwX"/>
+              <constraint firstItem="4wD-Cj-V7P" firstAttribute="top" secondItem="qa5-rf-huM" secondAttribute="top" constant="40" id="YeR-Bq-mA7"/>
+              <constraint firstItem="qa5-rf-huM" firstAttribute="trailing" secondItem="LKr-Qk-vBS" secondAttribute="trailing" constant="30" id="Ztb-Lq-aCe"/>
+              <constraint firstItem="4wD-Cj-V7P" firstAttribute="leading" secondItem="qa5-rf-huM" secondAttribute="leading" id="get-ee-8WU"/>
+              <constraint firstItem="qko-oi-f7S" firstAttribute="top" secondItem="LKr-Qk-vBS" secondAttribute="bottom" constant="20" id="mZq-LZ-VYQ"/>
+            </constraints>
+            <viewLayoutGuide key="safeArea" id="qa5-rf-huM"/>
+          </view>
+          <navigationItem key="navigationItem" id="jUC-gf-Em2"/>
+        </viewController>
+        <placeholder placeholderIdentifier="IBFirstResponder" id="8ju-E2-awK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+      </objects>
+      <point key="canvasLocation" x="1920.289855072464" y="130.58035714285714"/>
+    </scene>
+    <!--Navigation Controller-->
+    <scene sceneID="Pdk-W5-Vr7">
+      <objects>
+        <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GGa-EB-zkA" sceneMemberID="viewController">
+          <toolbarItems/>
+          <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="onz-eN-6CD">
+            <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+            <autoresizingMask key="autoresizingMask"/>
+          </navigationBar>
+          <nil name="viewControllers"/>
+          <connections>
+            <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="yZt-bQ-JM1"/>
+          </connections>
+        </navigationController>
+        <placeholder placeholderIdentifier="IBFirstResponder" id="b6O-z9-IwD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+      </objects>
+      <point key="canvasLocation" x="131.8840579710145" y="132.58928571428572"/>
+    </scene>
+  </scenes>
 </document>
