--- a/AstronomyObjC/AstronomyObjC/Views/Base.lproj/Main.storyboard
+++ b/AstronomyObjC/AstronomyObjC/Views/Base.lproj/Main.storyboard
@@ -78,15 +78,27 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MarsCell" id="RYB-Fo-0Ge">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MarsCell" id="RYB-Fo-0Ge" customClass="TMCMarsPhotoCollectionViewCell">
                                 <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1MO-gL-8qY">
                                     <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ebZ-tF-Bpw">
+                                            <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="ebZ-tF-Bpw" secondAttribute="trailing" id="2gf-3D-fJH"/>
+                                        <constraint firstItem="ebZ-tF-Bpw" firstAttribute="top" secondItem="1MO-gL-8qY" secondAttribute="top" id="LHy-qM-J6n"/>
+                                        <constraint firstItem="ebZ-tF-Bpw" firstAttribute="leading" secondItem="1MO-gL-8qY" secondAttribute="leading" id="ddj-nU-KoN"/>
+                                        <constraint firstAttribute="bottom" secondItem="ebZ-tF-Bpw" secondAttribute="bottom" id="oGb-1o-Va3"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
                                 <size key="customSize" width="180" height="180"/>
                                 <connections>
+                                    <outlet property="imageView" destination="ebZ-tF-Bpw" id="HLr-y1-IVk"/>
                                     <segue destination="Q0D-bw-ZUh" kind="show" identifier="PhotoDetailSegue" id="rR7-6f-jpO"/>
                                 </connections>
                             </collectionViewCell>
