--- a/Astronomy/Astronomy/Base.lproj/Main.storyboard
+++ b/Astronomy/Astronomy/Base.lproj/Main.storyboard
@@ -16,21 +16,34 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="w2B-az-T1b">
-                            <size key="itemSize" width="128" height="128"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="w2B-az-T1b">
+                            <size key="itemSize" width="414" height="399"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="fw1-y8-uIV">
-                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="fw1-y8-uIV" customClass="SSSPhotoCollectionViewCell">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="399"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="gu3-ay-FQh">
-                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="399"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="750" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="z4o-5y-9Bg">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="399"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="z4o-5y-9Bg" secondAttribute="bottom" id="BsS-vn-0GC"/>
+                                        <constraint firstItem="z4o-5y-9Bg" firstAttribute="top" secondItem="gu3-ay-FQh" secondAttribute="top" id="MBA-Kw-wn1"/>
+                                        <constraint firstAttribute="trailing" secondItem="z4o-5y-9Bg" secondAttribute="trailing" id="aJg-7w-1qt"/>
+                                        <constraint firstItem="z4o-5y-9Bg" firstAttribute="leading" secondItem="gu3-ay-FQh" secondAttribute="leading" id="tGX-zW-Jer"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
+                                <size key="customSize" width="414" height="399"/>
                                 <connections>
+                                    <outlet property="imageView" destination="z4o-5y-9Bg" id="Qqo-u7-apu"/>
                                     <segue destination="BYZ-38-t0r" kind="show" id="iD2-5m-2gz"/>
                                 </connections>
                             </collectionViewCell>
@@ -47,7 +60,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="74x-EY-6D7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1006" y="130"/>
+            <point key="canvasLocation" x="1005.7971014492755" y="129.91071428571428"/>
         </scene>
         <!--Photo Detail View Controller-->
         <scene sceneID="tne-QT-ifu">
