--- a/Astronomy/Astronomy/Base.lproj/Main.storyboard
+++ b/Astronomy/Astronomy/Base.lproj/Main.storyboard
@@ -54,9 +54,21 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" title="Sol 63" id="1Fv-0l-5sQ">
-                        <barButtonItem key="leftBarButtonItem" title="Item" image="chevron.left" catalog="system" id="3FI-8n-C7F"/>
-                        <barButtonItem key="rightBarButtonItem" title="Item" image="chevron.right" catalog="system" id="wFK-2j-TPO"/>
+                        <barButtonItem key="leftBarButtonItem" title="Item" image="chevron.left" catalog="system" id="3FI-8n-C7F">
+                            <connections>
+                                <action selector="previousSol:" destination="WLe-6b-Bev" id="JMX-8P-V0K"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="chevron.right" catalog="system" id="wFK-2j-TPO">
+                            <connections>
+                                <action selector="nextSol:" destination="WLe-6b-Bev" id="LqO-ot-anh"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="nextSolButton" destination="wFK-2j-TPO" id="8RM-E7-FR3"/>
+                        <outlet property="previousSolButton" destination="3FI-8n-C7F" id="rQL-yg-776"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="74x-EY-6D7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
